syntax = "proto3";
package auth;
option go_package = "github.com/southern-martin/ecommerce/proto/gen/auth";

import "common/common.proto";

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc Logout(LogoutRequest) returns (common.Empty);
    rpc ForgotPassword(ForgotPasswordRequest) returns (common.Empty);
    rpc ResetPassword(ResetPasswordRequest) returns (common.Empty);
    rpc OAuthLogin(OAuthLoginRequest) returns (AuthResponse);
    rpc UpdateUserRole(UpdateUserRoleRequest) returns (common.Empty);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string referral_code = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
    UserInfo user = 4;
}

message UserInfo {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string role = 5;
    string avatar_url = 6;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message ValidateTokenRequest {
    string access_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string email = 3;
    string role = 4;
}

message LogoutRequest {
    string user_id = 1;
    string access_token = 2;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ResetPasswordRequest {
    string token = 1;
    string new_password = 2;
}

message OAuthLoginRequest {
    string provider = 1;
    string code = 2;
    string redirect_uri = 3;
}

message UpdateUserRoleRequest {
    string user_id = 1;
    string role = 2;
}
